--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -103,7 +103,7 @@
         </div>
         <!-- /.row -->
         <div class="row">
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <div class="row">
@@ -111,8 +111,8 @@
                                 <i class="fa fa-comments fa-5x"></i>
                             </div>
                             <div class="col-xs-9 text-right">
-                                <div class="huge">26</div>
-                                <div>Produkty</div>
+                                <div class="huge" th:text="${reviewCount}"></div>
+                                <div>Opinie</div>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-6 col-md-6">
                 <div class="panel panel-green">
                     <div class="panel-heading">
                         <div class="row">
@@ -133,58 +133,14 @@
                                 <i class="fa fa-tasks fa-5x"></i>
                             </div>
                             <div class="col-xs-9 text-right">
-                                <div class="huge">12</div>
-                                <div>Automaty</div>
+                                <div class="huge" th:text="${lecturerCount}"></div>
+                                <div>Prowadzący</div>
                             </div>
                         </div>
                     </div>
                     <a href="#">
                         <div class="panel-footer">
                             <span class="pull-left">Zobacz listę</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="panel panel-yellow">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa fa-shopping-cart fa-5x"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge">124</div>
-                                <div>Transfery</div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="#">
-                        <div class="panel-footer">
-                            <span class="pull-left">Transfery</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <div class="panel panel-red">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa fa-support fa-5x"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge">13</div>
-                                <div>Obrót</div>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="#">
-                        <div class="panel-footer">
-                            <span class="pull-left">Zobacz</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                             <div class="clearfix"></div>
                         </div>
@@ -193,25 +149,34 @@
             </div>
         </div>
 
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Id</th>
-                <th>prowadzacy</th>
-                <th>ocena</th>
-                <th>tekst</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="review: *{reviews}">
-                <td th:text="${review.id}"></td>
-                <td th:text="${review.lecturer}"></td>
-                <td th:text="${review.rating}"></td>
-                <td th:text="${review.text}"></td>
-            </tr>
-            </tbody>
-        </table>
+        <div class="row">
+            <div class="col-md-6">
+                Ostatnio dodane
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th></th>
+                        <th>prowadzacy</th>
+                        <th>ocena</th>
+                        <th>tekst</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="review: *{reviews}">
+                        <td th:text="${review.lecturer}"></td>
+                        <td th:text="${review.rating}"></td>
+                        <td th:text="${review.text}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-3">
+                <a th:href="@{/run}">
+                    <button type="button" class="btn btn-info">Włącz worker</button>
+                </a>
 
+            </div>
+        </div>
 
     </div>
     <!-- /#page-wrapper -->
