--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
 
@@ -52,7 +52,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="@{/}">Projekt bazy danych 2</a>
+            <a class="navbar-brand" th:href="@{/}">PWR stats</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -60,32 +60,8 @@
         <div class="navbar-default sidebar" role="navigation">
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
-                    <li class="sidebar-search">
-                        <div class="input-group custom-search-form">
-                            <input type="text" class="form-control" placeholder="Search..."/>
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                        </div>
-                        <!-- /input-group -->
-                    </li>
                     <li>
-                        <a th:href="@{/}"><i class="fa fa-dashboard fa-fw"></i> Podsumowanie</a>
-                    </li>
-
-                    <li>
-                        <a th:href="@{/add}"><i class="fa fa-dashboard fa-fw"></i> Dodaj produkty</a>
-                    </li>
-
-                    <li>
-                        <a th:href="@{/from/mag/to/car}"><i class="fa fa-dashboard fa-fw"></i> Produkt z magazynu do
-                            auta</a>
-                    </li>
-
-                    <li>
-                        <a th:href="@{/to/machine}"><i class="fa fa-dashboard fa-fw"></i> Produkt z auta do automatu</a>
+                        <a th:href="@{/}"><i class="fa fa-dashboard fa-fw"></i> Home</a>
                     </li>
                 </ul>
             </div>
@@ -116,13 +92,6 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#">
-                        <div class="panel-footer">
-                            <span class="pull-left">Zobacz listę</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6">
@@ -138,51 +107,59 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#">
-                        <div class="panel-footer">
-                            <span class="pull-left">Zobacz listę</span>
-                            <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                            <div class="clearfix"></div>
-                        </div>
-                    </a>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-6">
-                Ostatnio dodane
-                <table class="table">
+                <form th:action="@{/search/lecturer}" method="get">
+                    <div class="input-group">
+
+                        <input type="text" name="q" class="form-control" placeholder="Wpisz prowadzącego..."/>
+                        <input type="submit" class="btn btn-default" value="Idziemy na szmaty (szukaj)"/>
+
+                    </div>
+                </form>
+                <table class="table" th:unless="${#lists.isEmpty(lecturerList)}">
                     <thead>
                     <tr>
-                        <th></th>
-                        <th>prowadzacy</th>
-                        <th>ocena</th>
-                        <th>tekst</th>
+                        <th>Prowadzący</th>
+                        <th>Uczelnia</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="review: *{reviews}">
-                        <td th:text="${review.lecturer}"></td>
+                    <tr th:each="lecturer: *{lecturerList}">
+                        <td><a th:href="@{/search/review(id=${lecturer.id})}" th:text="${lecturer.name}"> </a></td>
+                        <td th:text="${lecturer.university.name}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="col-md-6" th:unless="${#lists.isEmpty(reviewList)}">
+
+                <button type="button" class="btn btn-primary" th:text="'Oceny dla: ' + ${lecturerName}"></button>
+                <button type="button" class="btn btn-primary"
+                        th:text="'Ilość ocen: ' + ${#lists.size(reviewList)}"></button>
+
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Ocena</th>
+                        <th>Tekst</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="review: *{reviewList}">
                         <td th:text="${review.rating}"></td>
                         <td th:text="${review.text}"></td>
                     </tr>
                     </tbody>
                 </table>
             </div>
-            <div class="col-md-3">
-                <form method="post" th:action="@{/}">
-                    <input class="form-control" type="text" name="cookie" id="cookie" th:value="${cookie}"/>
-                    <input class="form-control" type="submit" value="Zapisz cookie"/>
-                </form>
-            </div>
-            <div class="col-md-3">
-                <a th:href="@{/run}">
-                    <button type="button" class="btn btn-info">Włącz worker</button>
-                </a>
-
-            </div>
         </div>
+
 
     </div>
     <!-- /#page-wrapper -->
