--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,207 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
-<head>
-
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-
-    <title>Projekt - Bazy danych 2</title>
-
-    <!-- Bootstrap Core CSS -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>-->
-    <link th:href="@{/bower_components/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet"/>
-
-    <!-- MetisMenu CSS -->
-    <link th:href="@{/bower_components/metisMenu/dist/metisMenu.min.css}" rel="stylesheet"/>
-
-    <!-- Timeline CSS -->
-    <link th:href="@{/dist/css/timeline.css}" rel="stylesheet"/>
-
-    <!-- Custom CSS -->
-    <link th:href="@{/dist/css/sb-admin-2.css}" rel="stylesheet"/>
-
-    <!-- Morris Charts CSS -->
-    <link th:href="@{/bower_components/morrisjs/morris.css}" rel="stylesheet"/>
-
-    <!-- Custom Fonts -->
-    <link th:href="@{/bower_components/font-awesome/css/font-awesome.min.css}" rel="stylesheet" type="text/css"/>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-17049730-16', 'auto');
-        ga('send', 'pageview');
-
-    </script>
-
-</head>
-
+<head th:replace="template :: head"></head>
 <body>
 
-<div id="wrapper">
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" th:href="@{/}">PWR stats</a>
+<!-- Navigation -->
+<nav th:replace="template :: navigation"></nav>
+
+<!-- Header -->
+<header id="top" class="header">
+    <div class="text-vertical-center">
+        <h1>Wyszukaj opinie o prowadzących</h1>
+        <h3>Darmowe, szybkie i odjebane na szybko</h3>
+        <br/>
+        <div class="alert alert-warning" th:if="${error != null}">
+            <strong>Warning</strong>
+            <small th:text="'Nie znaleziono prowadzącego o nazwie: ' + ${error}"></small>
         </div>
-        <!-- /.navbar-header -->
+        <div class="col-lg-6 col-lg-offset-3">
+            <form th:action="@{/search/review}" method="get" role="form">
+                <div class="form-group input-group">
+                    <input type="text" name="lecturer"
+                           class="form-control"
+                           placeholder="Znajdź prowadzącego..."
+                           list="lecturers"
+                           data-minchars="2"
+                           data-maxitems="10"/>
+                      <span class="input-group-btn">
+                          <button class="btn btn-default" type="button">
+                              <i class="fa fa-search"></i>
+                          </button>
+                      </span>
 
 
-        <div class="navbar-default sidebar" role="navigation">
-            <div class="sidebar-nav navbar-collapse">
-                <ul class="nav" id="side-menu">
-                    <li>
-                        <a th:href="@{/}"><i class="fa fa-dashboard fa-fw"></i> Home</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.sidebar-collapse -->
-        </div>
-        <!-- /.navbar-static-side -->
-    </nav>
-
-    <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Podsumowanie</h1>
-            </div>
-            <!-- /.col-lg-12 -->
-        </div>
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa fa-comments fa-5x"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge" th:text="${reviewCount}"></div>
-                                <div>Opinie</div>
-                            </div>
-                        </div>
-                    </div>
+                    <datalist id="lecturers">
+                        <option th:each="lecturer: *{lecturerList}"
+                                th:text="${lecturer.name}"></option>
+                    </datalist>
                 </div>
-            </div>
-            <div class="col-lg-6 col-md-6">
-                <div class="panel panel-green">
-                    <div class="panel-heading">
-                        <div class="row">
-                            <div class="col-xs-3">
-                                <i class="fa fa-tasks fa-5x"></i>
-                            </div>
-                            <div class="col-xs-9 text-right">
-                                <div class="huge" th:text="${lecturerCount}"></div>
-                                <div>Prowadzący</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </form>
         </div>
-
-        <div class="row">
-            <div class="col-md-6">
-                <form th:action="@{/search/lecturer}" method="get">
-                    <div class="input-group">
-
-                        <input type="text" name="q" class="form-control" placeholder="Wpisz prowadzącego..."/>
-                        <input type="submit" class="btn btn-default" value="Idziemy na szmaty (szukaj)"/>
-
-                    </div>
-                </form>
-                <table class="table" th:unless="${#lists.isEmpty(lecturerList)}">
-                    <thead>
-                    <tr>
-                        <th>Prowadzący</th>
-                        <th>Uczelnia</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="lecturer: *{lecturerList}">
-                        <td><a th:href="@{/search/review(id=${lecturer.id})}" th:text="${lecturer.name}"> </a></td>
-                        <td th:text="${lecturer.university.name}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="col-md-6" th:unless="${#lists.isEmpty(reviewList)}">
-
-                <button type="button" class="btn btn-primary" th:text="'Oceny dla: ' + ${lecturerName}"></button>
-                <button type="button" class="btn btn-primary"
-                        th:text="'Ilość ocen: ' + ${#lists.size(reviewList)}"></button>
-
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Ocena</th>
-                        <th>Tekst</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="review: *{reviewList}">
-                        <td th:text="${review.rating}"></td>
-                        <td th:text="${review.text}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
 
     </div>
-    <!-- /#page-wrapper -->
-
-</div>
-<!-- /#wrapper -->
-
-<!-- jQuery -->
-<script th:src="@{/bower_components/jquery/dist/jquery.min.js}"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script th:src="@{/bower_components/bootstrap/dist/js/bootstrap.min.js}"></script>
-
-<!-- Metis Menu Plugin JavaScript -->
-<script th:src="@{/bower_components/metisMenu/dist/metisMenu.min.js}"></script>
-
-<!-- Morris Charts JavaScript -->
-<script th:src="@{/bower_components/raphael/raphael-min.js}"></script>
-<script th:src="@{/bower_components/morrisjs/morris.min.js}"></script>
-<script th:src="@{/js/morris-data.js}"></script>
-
-<!-- Custom Theme JavaScript -->
-<script th:src="@{/dist/js/sb-admin-2.js}"></script>
-
+</header>
 </body>
 
 </html>
